# multi_vfs_ntpd_rav

./: CMakeLists.txt  README.html  README.md  cross-build.sh
client/: CMakeLists.txt
client/src/: client.c
einit/: CMakeLists.txt
einit/src/: init.yaml.in  security.psl
resources/edl/: Client.edl
resources/hdd/etc/: ntp.conf
